# backfield

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  docker-bake.hcl  pyproject.toml
apps/agate-api/: Dockerfile  pyproject.toml
apps/agate-api/scripts/: entrypoint.sh
apps/agate-api/src/api/: deps.py  local_bootstrap.py  main.py  processed_item_article_context.py  processed_item_locations_merge.py  processed_item_mention_occurrences.py  processed_item_overlay_validate.py  processed_item_review_enrichment.py  processed_item_reviewed_output.py
apps/agate-api/src/api/processed_item/: __init__.py  custom_records_merge.py  mention_occurrences.py  review_enrichment.py
apps/agate-api/src/api/processed_item/content/: __init__.py  article_context.py
apps/agate-api/src/api/processed_item/entities/: __init__.py  review_identity.py
apps/agate-api/src/api/processed_item/entities/article_meta/: __init__.py  meta_merge.py
apps/agate-api/src/api/processed_item/entities/location/: __init__.py  locations_merge.py  review_enrichment.py
apps/agate-api/src/api/processed_item/entities/organization/: __init__.py  organizations_merge.py  review_enrichment.py
apps/agate-api/src/api/processed_item/entities/person/: __init__.py  people_merge.py  review_enrichment.py
apps/agate-api/src/api/processed_item/overlay/: __init__.py  reviewed_output.py  validate.py
apps/agate-api/src/api/routers/: graphs.py  health.py  nodes.py  projects.py  runs.py  templates.py
apps/core-api/: Dockerfile  pyproject.toml
apps/core-api/src/core_api/: ai_model_catalog.py  authz.py  bootstrap_users.py  deps.py  env_bootstrap.py  main.py  org_integration_secrets.py  project_ai_catalog.py  run_enqueue.py  security.py
apps/core-api/src/core_api/routers/: admin_org.py  auth.py  bootstrap.py  credentials.py  legacy_public.py  me.py  org_ai_models.py  org_integration_secrets.py  project_ai_models.py  public.py  secure.py
apps/core-api/src/core_api/routers/public/: __init__.py  articles.py  deps.py  errors.py  openapi.py  projects.py  rate_limit.py  schemas.py  stylebook_query.py
apps/core-api/src/core_api/routers/public/articles/: __init__.py  custom_records.py  detail.py  facets.py  geo_cell_detail.py  geo_cells.py  geo_cells_batch.py  geo_search.py  helpers.py  images.py  locations.py  mentions.py  metadata.py  organizations.py  people.py  responses.py  search.py  semantic_search.py
apps/core-api/src/core_api/routers/public/entities/: __init__.py  connections.py  mention_helpers.py
apps/core-api/src/core_api/routers/public/locations/: __init__.py  detail.py  helpers.py  list_search.py
apps/core-api/src/core_api/routers/public/mentions/: __init__.py  detail.py  facets.py  helpers.py  search.py
apps/core-api/src/core_api/routers/public/organizations/: connections.py  mentions.py
apps/core-api/src/core_api/routers/public/people/: __init__.py  connections.py  list_search.py  mentions.py
apps/core-api/src/core_api/routers/public/projects/: __init__.py  routes.py
apps/core-api/src/core_api/routers/public/runs/: __init__.py  create.py  detail.py  helpers.py  schemas.py
apps/stylebook-api/: Dockerfile  pyproject.toml
apps/stylebook-api/src/api/: main.py
apps/stylebook-api/src/stylebook_api/: __init__.py  catalog_scope.py  deps.py  main.py  mention_occurrences.py  mention_serialization.py  semantic_reindex.py  stylebook_permissions.py  stylebook_scope.py
apps/stylebook-api/src/stylebook_api/entities/: __init__.py
apps/stylebook-api/src/stylebook_api/entities/location/: __init__.py  candidates.py  locations.py  meta.py
apps/stylebook-api/src/stylebook_api/entities/organization/: __init__.py  candidates.py  meta.py  organizations.py
apps/stylebook-api/src/stylebook_api/entities/person/: __init__.py  candidates.py  meta.py  people.py
apps/stylebook-api/src/stylebook_api/helpers/: candidate_review_display.py  canonical_evidence_counts.py  connections_utils.py  meta_utils.py  pagination.py  project_scope.py
apps/stylebook-api/src/stylebook_api/imports/: __init__.py  csv_models.py  csv_organizations.py  csv_parse.py  csv_people.py  registry.py
apps/stylebook-api/src/stylebook_api/routers/: __init__.py  connections.py  geocode.py  health.py  imports.py  location_candidates.py  location_meta.py  locations.py  semantic_mention_search.py  stats.py  stylebook_activity.py  stylebook_bundle_jobs.py  stylebook_candidate_ai_review.py  stylebook_canonicals.py  stylebook_cleanup.py  stylebook_cleanup_ai_review.py  stylebook_organization_canonicals.py  stylebook_permissions.py  stylebook_person_canonicals.py  stylebooks.py  taxonomy.py  ui_stubs.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/scripts/: entrypoint.sh
apps/worker/src/worker/: __init__.py  canonical_adjudication.py  celery_logging.py  processed_item_claims.py  startup.py  substrate_article.py  substrate_article_geography_reset.py  substrate_common.py  substrate_location.py  substrate_mentions.py  substrate_persistence.py  substrate_span.py  tasks.py
apps/worker/src/worker/flags/: __init__.py  replace_geography.py
apps/worker/src/worker/nodes/: __init__.py  db_output.py
apps/worker/src/worker/semantic_indexing/: __init__.py  embed.py  reindex.py
apps/worker/src/worker/substrate/: __init__.py  ai_review_cancel.py  orchestration.py
apps/worker/src/worker/substrate/candidates/: ai_review.py
apps/worker/src/worker/substrate/canonical/: __init__.py  adjudication.py  adjudication_result.py  llm_call_policy.py  parallel_llm.py
apps/worker/src/worker/substrate/cleanup/: __init__.py  ai_review.py  cleanup_llm_auth.py  questionable_organizations_llm.py
apps/worker/src/worker/substrate/content/: __init__.py  article.py  geography_reset.py
apps/worker/src/worker/substrate/entities/: __init__.py  registry.py
apps/worker/src/worker/substrate/entities/location/: __init__.py  handler.py  mentions.py  span.py  upsert.py
apps/worker/src/worker/substrate/entities/organization/: __init__.py  adjudication.py  handler.py  (+2 more)
(+872 files in other folders)
