[project]
name = "backfield-workspace"
version = "0.1.0"
description = "Backfield monorepo (Agate + Stylebook)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.6.0",
    "backfield-core",
]

[tool.uv.workspace]
members = [
    "packages/backfield-core",
    "packages/backfield-auth",
    "packages/backfield-stylebook",
    "packages/backfield-agate",
    "packages/backfield-db",
    "apps/agate-api",
    "apps/worker",
    "apps/stylebook-api",
    "apps/core-api",
]

[tool.uv.sources]
backfield-core = { workspace = true }
backfield-auth = { workspace = true }
backfield-agate = { workspace = true }
backfield-db = { workspace = true }
backfield-stylebook = { workspace = true }
core-api = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages/backfield-core/tests", "packages/backfield-auth/tests", "tests"]
pythonpath = [
    "packages/backfield-core/src",
    "packages/backfield-auth/src",
    "packages/backfield-agate/src",
    "packages/backfield-db/src",
    "packages/backfield-stylebook/src",
    "apps/agate-api/src",
    "apps/worker/src",
    "apps/stylebook-api/src",
    "apps/core-api/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "packages/backfield-db/alembic",
    "**/node_modules",
    "packages/backfield-agate",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
