[project]
name = "backfield-workspace"
version = "0.1.0"
description = "Backfield monorepo (Agate + Stylebook); internal workspace, not published to PyPI"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Private :: Do Not Upload",
]
dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.6.0",
    "agate-runtime",
    "backfield-cli",
    "backfield-db",
]

[project.urls]
Homepage = "https://github.com/localangle/backfield"
Repository = "https://github.com/localangle/backfield"

[tool.uv.workspace]
members = [
    "packages/backfield-ai",
    "packages/backfield-auth",
    "packages/backfield-cli",
    "packages/backfield-entities",
    "packages/backfield-agate",
    "packages/backfield-db",
    "apps/agate-api",
    "apps/worker",
    "apps/stylebook-api",
    "apps/core-api",
]

[tool.uv.sources]
backfield-ai = { workspace = true }
backfield-auth = { workspace = true }
backfield-cli = { workspace = true }
agate-runtime = { workspace = true }
backfield-db = { workspace = true }
backfield-entities = { workspace = true }
core-api = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages/backfield-agate/tests", "packages/backfield-auth/tests", "packages/backfield-db/tests", "packages/backfield-cli/tests", "tests"]
pythonpath = [
    "packages/backfield-ai/src",
    "packages/backfield-auth/src",
    "packages/backfield-agate/src",
    "packages/backfield-db/src",
    "packages/backfield-entities/src",
    "apps/agate-api/src",
    "apps/worker/src",
    "apps/stylebook-api/src",
    "apps/core-api/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "packages/backfield-db/alembic",
    "**/node_modules",
    "packages/backfield-agate/src/agate_nodes/geocode_agent",
    "packages/backfield-agate/src/agate_nodes/place_extract",
    "packages/backfield-agate/src/agate_utils",
    "packages/backfield-agate/src/agate_runtime/output_node.py",
    "packages/backfield-agate/src/agate_runtime/runners.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
