[project]
name = "core-api"
version = "0.1.0"
description = "Backfield Core API (articles/import and shared domain endpoints)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "backfield-auth",
    "backfield-db",
    "backfield-stylebook",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.x reads bcrypt.__about__.__version__ (removed in bcrypt 4.1+) and mishandles 5.x.
    "bcrypt>=4.0.1,<4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_api"]
