[project]
name = "stylebook-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "backfield-ai",
    "backfield-auth",
    "backfield-db",
    "backfield-stylebook",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stylebook_api"]
