[project]
name = "agate-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "geoalchemy2>=0.14.0",
    "backfield-core",
    "backfield-db",
    "backfield-stylebook",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
